--- a/style.css
+++ b/style.css
@@ -1,1 +1,3 @@
-body{font-family: Calibri; background-color: lightgrey}
+body {background-color: #ECECEC}
+.code{background-color: #D2D2D2; width: min-content; color: red}
+
